ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo-api.dev.awesomeweb.app
      http:
        paths:
          - path: /
            backend:
              serviceName: demo-api-service-dev
              servicePort: 80
    - host: demo-api.staging.awesomeweb.app
      http:
        paths:
          - path: /
            backend:
              serviceName: demo-api-service-staging
              servicePort: 80
#    - host: demo-api.prod.awesomeweb.app
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: demo-api-service-prod
#              servicePort: 80
